--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
     <link href="drivers.css" rel="stylesheet" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8" />
@@ -15,8 +16,10 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container">
-            <a class="navbar-brand" href="index.html">F1Tracker                                                                                                                                                                                                                        
-            <div class="fa fa-flag-checkered"></div></a>
+            <a class="navbar-brand" href="index.html">
+                F1Tracker
+                <div class="fa fa-flag-checkered"></div>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -42,6 +45,9 @@
                 <span data-bind="html: 'Drivers: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
             </p>
             <button class="btn-fav btn-default " style="width: 100px;height:50px">Show Favorites</button> <!-- este botão tá uma real merda, tentar encostar isto à direita -->
+            <div class="container">
+                <input class="form-control" ID="SearchText" placeholder="Search Driver" />
+            </div>
             <div class="col-8 my-0 pt-3">
                 <ul class="pagination float-end">
                     <!-- ko if: currentPage() > 5 && totalPages() > 10 -->
@@ -114,7 +120,32 @@
     </nav>
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
-    <script src="../Scripts/jquery-3.6.0.min.js"></script>
+    <script src="../Scripts/jquery-3.6.0.js"></script>
+    <script src="../Scripts/jquery-ui-1.13.0.js"></script>
     <script src="drivers.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            uri = "http://192.168.160.58/Formula1/api/Search/Drivers?q=" + $('#SearchText').val(),
+            console.log(uri)
+            $("#SearchText").autocomplete({
+                minLength: 2,
+                source: function (request, response) {
+                    $.ajax({
+                        type: "GET",
+                        contentType: "application/json; charset=utf-8",
+                        url: uri,
+                        data: "Name:",
+                        dataType: "json",
+                        success: function (data) {
+                            response(data.d);
+                        },
+                        error: function (result) {
+                            alert(result.statusText);
+                        }
+                    });
+                }
+            });
+        });
+    </script>
 </body>
 </html>
