--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -108,11 +108,11 @@
             <div class="modal-content">
                 <div class="modal-header bg-dark text-light">
                     <h5 class="modal-title" id="exampleModalLabel">
-                        <img src="../images/F1_logo.png" height="30" /> Loading data...
+                        <i class="fa fa-spin fa-3x fa-refresh"></i>                                                        Loading data...
+
                     </h5>
                 </div>
-                <div class="modal-body text-center">
-                    <i class="fa fa-spin fa-3x fa-refresh"></i>
+                <div class="modal-body text-center" style="background-image: url(https://www.gqportugal.pt/media/pages/4472/full_F1.jpg); background-position: center; background-size: cover; height: 100px;">
                 </div>
             </div>
         </div>
