--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -119,13 +119,13 @@
     </div>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
-                    <div class="card-link">
-                        <img src="https://staticg.sportskeeda.com/editor/2019/01/03554-15465753188506-800.jpg" class="card-img-top" alt="The History" height="315">
-                        <div class="card-body">
-                            <h5 class="card-title">Formula 1 - The History</h5>
-                            <p class="card-text"><a href="history.html" style="text-decoration: none">All you need to know about Formula 1.</a></p>
-                        </div>
-                    </div>
+            <div class="card-link">
+                <img src="https://staticg.sportskeeda.com/editor/2019/01/03554-15465753188506-800.jpg" class="card-img-top" alt="The History" height="315">
+                <div class="card-body">
+                    <h5 class="card-title">Formula 1 - The History</h5>
+                    <p class="card-text"><a href="history.html" style="text-decoration: none">All you need to know about Formula 1.</a></p>
+                </div>
+            </div>
         </div>
         <div class="col">
             <div class="card">
@@ -146,8 +146,23 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-dark text-light">
+                    <h5 class="modal-title" id="exampleModalLabel">
+                        <img src="https://www.gqportugal.pt/media/pages/4472/full_F1.jpg" height="30" /> Loading data...
+                    </h5>
+                </div>
+                <div class="modal-body text-center">
+                    <i class="fa fa-spin fa-3x fa-refresh"></i>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
