--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -10,6 +10,7 @@
     <link href="myCSS.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="../Content/themes/base/jquery-ui.css" rel="stylesheet" />
     <meta charset="utf-8" />
 </head>
 <body>
@@ -47,19 +48,19 @@
         <div class="border-bottom pt-4 pb-2 mb-3">
             <h2>Drivers List</h2>
         </div>
+        <div class="row" style="float: left;">
+            <input class="form-control" id="SearchText" placeholder="Search by Name" style="width:300px; float: left;" />
+        </div>
         <!-- ko if:records().length > 0 -->
         <p class=" col-4 mr-auto pt-2">
             <span data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
             <span data-bind="html: 'Drivers: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
         </p>
         <div class="row-cols-3">
-            <div class="row" style="float: left;">
-                <input class="form-control" ID="SearchText" placeholder="Search by Name" style="width:300px; float: left;" />
-            </div>
             <div class="row">
                 <button class="btn-fav btn-outline-success" style="width: 200px;height:30px;">Show Favorites</button>
             </div>
-            <div class="col-8 my-0 pt-3" style="float: right;">
+            <div class="row" style="float:right;">
                 <ul class="pagination float-end">
                     <!-- ko if: currentPage() > 5 && totalPages() > 10 -->
                     <li class="page-item float-end"><a class="page-link" title="First Page" data-bind="attr: { href: './drivers.html?page=' + '1',  rel:'prev'}">⇤</a></li>
@@ -127,18 +128,19 @@
     <script src="drivers.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            console.log($('#SearchText').val()),
             $("#SearchText").autocomplete({
-                minLength: 2,
+                minLength: 4,
                 source: function (request, response) {
                     $.ajax({
-                        type: "POST",
+                        type: "GET",
                         contentType: "application/json; charset=utf-8",
-                        url: "http://192.168.160.58/Formula1/api/Search/Drivers?q=" + $('#SearchText').val() ,
-                        data: "{'Name':'" + $('#SearchText').val() + "'}",
+                        url: 'http://192.168.160.58/Formula1/api/Search/Drivers?q=' + $('#SearchText').val(),
+                        data: '',
                         dataType: "json",
                         success: function (data) {
-                            response(data.d);
+                            response($.map(data, function (item) {
+                                return item.Name;
+                            }));
                         },
                         error: function (result) {
                             alert(result.statusText);
