--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -49,7 +49,7 @@
             <h2>Drivers List</h2>
         </div>
         <div class="row" style="float: left;">
-            <input class="form-control" id="SearchText" placeholder="Search by Name" style="width:300px; float: left;" />
+            <input class="form-control" id="SearchText" onkeyup="myFunction()" placeholder="Search by Name" style="width:300px; float: left;" />
         </div>
         <!-- ko if:records().length > 0 -->
         <p class=" col-4 mr-auto pt-2">
@@ -82,7 +82,7 @@
             </div>
         </div>
         <!-- /ko -->
-        <table class="table table-striped table-sm small">
+        <table class="table table-striped table-sm small" id="myTable">
             <thead class="bg-dark text-light">
                 <tr>
                     <th scope="col">Id</th>
