--- a/Projeto/circuits.html
+++ b/Projeto/circuits.html
@@ -77,7 +77,7 @@
 
         <!-- /ko -->
         <table class="table table-striped table-sm small">
-            <thead class="bg-dark text-light">
+            <thead class="bg-success text-light">
                 <tr>
                     <th scope="col">Id</th>
                     <th scope="col">Name</th>
