--- a/Projeto/driverDetails.html
+++ b/Projeto/driverDetails.html
@@ -80,11 +80,29 @@
             <tr class="row">
                 <th colspan="2">Races Done: <span data-bind="text: Races().length"></span></th>
             </tr>
-            <tr>
-                <td colspan="2" class="small" data-bind="foreach: Races">
-                    <div class="border rounded d-inline-block mr-2 mb-1 p-1"><i class=" fa fa-dot-circle-o"></i> <a class="text-muted text-decoration-none" data-bind="text: Name + ' ('+Year+')', attr: { href: './raceDetails?id=' + RaceId }"></a> (<span data-bind="text: RaceId"></span>)</div>
-                </td>
-            </tr>
+        </table>
+        <table class="table table-striped table-sm small">
+            <thead class="bg-success text-light">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">CircuitName</th>
+                    <th scope="col">Year</th>
+                    <th scope="col">Name</th>
+                    <th scope="col" class="text-right"></th>
+                </tr>
+            </thead>
+            <tbody data-bind="foreach: Races">
+                <tr>
+                    <td class="align-middle" data-bind="text:RaceId"></td>
+                    <td class="align-middle" data-bind="text:CircuitName"></td>
+                    <td class="align-middle" data-bind="text:Year"></td>
+                    <td class="align-middle" data-bind="text:Name"></td>
+                    <td class="text-end">
+                        <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./racesDetails.html?id=' + RaceId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
+                        <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + RaceId }" title="Selecione para adicionar aos favoritos"></i></button>
+                    </td>
+                </tr>
+            </tbody>
         </table>
         <!-- /ko -->
     </div>
