--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -83,7 +83,7 @@
         </div>
         <!-- /ko -->
         <table class="table table-striped table-sm small" id="myTable">
-            <thead class="bg-dark text-light">
+            <thead class="bg-success text-light">
                 <tr>
                     <th scope="col">Id</th>
                     <th scope="col">Name</th>
