--- a/Projeto/circuits.html
+++ b/Projeto/circuits.html
@@ -76,7 +76,7 @@
         </div>
 
         <!-- /ko -->
-        <table class="table table-striped table-sm small">
+        <table class="table table-striped table-hover table-sm small">
             <thead class="bg-success text-light">
                 <tr>
                     <th scope="col">Id</th>
