--- a/Projeto/driverDetails.html
+++ b/Projeto/driverDetails.html
@@ -89,7 +89,7 @@
                 <th colspan="2">Races Done: <span data-bind="text: Races().length"></span></th>
             </tr>
         </table>
-        <table class="table table-striped table-sm small" style="overflow-y: scroll;height: 500px; display: block;">
+        <table class="table table-striped table-hover" style="overflow: scroll;height: 300px; display: block;">
             <thead class="bg-success text-light">
                 <tr>
                     <th scope="col">Id</th>
@@ -101,10 +101,10 @@
             </thead>
             <tbody data-bind="foreach: Races">
                 <tr>
-                    <td class="align-middle" data-bind="text:RaceId"></td>
-                    <td class="align-middle" data-bind="text:CircuitName"></td>
-                    <td class="align-middle" data-bind="text:Year"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
+                    <td class="align-middle"  data-bind="text:RaceId"></td>
+                    <td class="align-middle"  data-bind="text:CircuitName"></td>
+                    <td class="align-middle"  data-bind="text:Year"></td>
+                    <td class="align-middle"  data-bind="text:Name"></td>
                     <td class="text-end">
                         <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./racesDetails.html?id=' + RaceId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
                         <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + RaceId }" title="Selecione para adicionar aos favoritos"></i></button>
