--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -82,7 +82,7 @@
             </div>
         </div>
         <!-- /ko -->
-        <table class="table table-striped table-sm small" id="myTable">
+        <table class="table table-striped table-hover table-sm small" id="myTable">
             <thead class="bg-success text-light">
                 <tr>
                     <th scope="col">Id</th>
