--- a/Projeto/driverDetails.html
+++ b/Projeto/driverDetails.html
@@ -89,7 +89,7 @@
                 <th colspan="2">Races Done: <span data-bind="text: Races().length"></span></th>
             </tr>
         </table>
-        <table class="table table-striped table-sm small" style="overflow-y: scroll;height: 500px; display: block;">
+        <table class="table table-striped table-md lg" style="overflow-y: scroll;height: 500px; display: block;">
             <thead class="bg-success text-light">
                 <tr>
                     <th scope="col">Id</th>
