--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -54,7 +54,7 @@
 <body>
     <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index.html" style="font-weight:bold;padding-right:50px;">
                 F1Tracker
                 <div class="fa fa-flag-checkered"></div>
             </a>
@@ -64,7 +64,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="constructors.html">Constructors</a></li>
+                    <li class="nav-item">
+                        <div class="dropdown">
+                        <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Constructors</a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <li><a class="dropdown-item" href='constructors.html'>All Constructors</a></li>
+                            <li><a class="dropdown-item" href="constructors2021.html">2021 Teams</a></li>
+                        </ul>
+                    </div>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html">Countries</a></li>
                     <li class="nav-item">
