--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -54,7 +54,7 @@
 <body>
     <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html" style="font-weight:bold;padding-right:50px;">
+            <a class="navbar-brand" href="index.html" style="font-weight:bold;padding-right:30px;">
                 F1Tracker
                 <div class="fa fa-flag-checkered"></div>
             </a>
@@ -73,7 +73,7 @@
                         </ul>
                     </div>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html">Countries</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html">Seasons</a></li>
                     <li class="nav-item">
                         <div class="dropdown">
                             <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">More</a>
