--- a/Projeto/legends.html
+++ b/Projeto/legends.html
@@ -15,9 +15,9 @@
     <title></title>
 </head>
 <body style="background-image: url(https://w0.peakpx.com/wallpaper/737/716/HD-wallpaper-legends-ayrton-senna-f1-fia-formula-1-formula1-michael-schumacher-niki-lauda-schumacher-senna.jpg);  background-repeat: no-repeat; background-size: cover; background-position: center">
-    <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top" style="height:70px;">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index.html" style="font-weight:bold;padding-right:30px;">
                 F1Tracker
                 <div class="fa fa-flag-checkered"></div>
             </a>
@@ -27,23 +27,32 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="constructors.html">Constructors</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Constructors
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="constructors.html">All Constructors</a></li>
+                            <li><a class="dropdown-item" href="constructors2021.html">2021 Teams</a></li>
+                        </ul>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html">Countries</a></li>
-                    <li class="nav-item">
-                        <div class="dropdown">
-                            <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">More</a>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                <li><a class="dropdown-item" href='history.html'>History</a></li>
-                                <li><a class="dropdown-item" href="legends.html">Legends</a></li>
-                                <li><a class="dropdown-item" href="rules.html">Rules</a></li>
-                            </ul>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html">Seasons</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          More
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="history.html">History </a></li>
+                            <li><a class="dropdown-item" href="rules.html">Rules</a></li>
+                            <li><a class="dropdown-item" href="legends.html">Legends</a></li>
+                        </ul>
                         </div>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+    <div class="filler" style="width:100%;height:50px"></div>
     <div class="filler" style="width:100%;height:50px"></div>
     <div>
         <p>.</p>
